--- a/proc.qmd
+++ b/proc.qmd
@@ -19,29 +19,30 @@ data <- readRDS("./pisa22_proc.rds")
 ```{r}
 proc_data <- data |> 
   select(
-    CNT, 
     -CNTRYID, 
-    -CNTSCHID, 
-    sex, 
-    -identify_app, 
-    programming, 
-    logical_solution, 
-    -develop_webpage, 
-    identify_error, 
-    search_info, 
-    evaluate_info, 
-    share_content, 
-    pair_collab, 
-    explain_content, 
-    write_text, 
+    -CNTSCHID,
     -collect_data, 
     -create_media, 
-    -change_settings)
+    -change_settings,
+    -identify_app,
+    -develop_webpage, 
+    CNT, 
+    sex,
+    gen1 = search_info, 
+    gen2 = evaluate_info, 
+    gen3 = share_content, 
+    gen4 = pair_collab, 
+    gen5 = explain_content, 
+    gen6 = write_text,
+    spec1 = programming, 
+    spec2 = logical_solution, 
+    spec3 = identify_error
+)
 
 items_dse <- c(
-  "programming", "logical_solution", "identify_error",
-  "search_info", "evaluate_info", "share_content",
-  "pair_collab", "explain_content", "write_text"
+  "gen1", "gen2", "gen3",
+  "gen4", "gen5", "gen6",
+  "spec1", "spec2", "spec3"
 )
 
 proc_data <- proc_data |>
@@ -55,39 +56,43 @@ proc_data <- proc_data |>
 
 ```{r}
 nombres_descriptivos <- c(
-  "programming" = "Crear programa",
-  "logical_solution" = "Pasos lógicos",
-  "identify_error" = "Identificar error",
-  "search_info" = "Buscar información",
-  "evaluate_info" = "Evaluar información",
-  "share_content" = "Compartir información",
-  "pair_collab" = "Colaborar en grupo",
-  "explain_content" = "Explicar cómo compartir",
-  "write_text" = "Escribir/editar texto"
+  "gen1" = "Buscar información",
+  "gen2" = "Evaluar información",
+  "gen3" = "Compartir información",
+  "gen4" = "Colaborar en grupo",
+  "gen5" = "Explicar cómo compartir",
+  "gen6" = "Escribir/editar texto",
+  "spec1" = "Crear programa",
+  "spec2" = "Pasos lógicos",
+  "spec3" = "Identificar error"
 )
 
 descriptivos <- psych::describe(proc_data[items_dse])
+desc <- psych::response.frequencies(proc_data[items_dse])
+desc <- as.data.frame(desc)
+desc$skew <- descriptivos$skew
+desc$kurtosis <- descriptivos$kurtosis
 
-prop_ausentes <- proc_data[items_dse] |>
-  summarise_all(~ mean(is.na(.))) |>
-  pivot_longer(everything(), names_to = "variable", values_to = "prop_na")
 
-descriptivos_df <- descriptivos |>
+descriptivos_df <- desc |>
   rownames_to_column(var = "variable") |>
-  left_join(prop_ausentes, by = "variable") |>
   select(
     variable,
-    Media = mean,
-    `D.E.` = sd,
+    `1`, `2`, `3`, `4`,
     Asimetría = skew,
     Curtosis = kurtosis,
-    `% Casos perdidos` = prop_na
+    `% Casos perdidos` = miss
   ) |>
   mutate(`% Casos perdidos` = `% Casos perdidos` * 100) |>
+  mutate(`1` = `1` * 100) |>
+  mutate(`2` = `2` * 100) |>
+  mutate(`3` = `3` * 100) |>
+  mutate(`4` = `4` * 100) |>
   mutate(variable = factor(variable, levels = items_dse)) |>
   arrange(variable) |>
   mutate(variable = recode(variable, !!!nombres_descriptivos)) |>
   rename(Ítem = variable)
+
 ```
 
 # Preparación de data para Mplus
@@ -102,10 +107,16 @@ prepareMplusData(proc_data, filename="mplus_files/pisadse.dat", inpfile = FALSE)
 runModels("./mplus_files/")
 ```
 
+```{r}
+gen_dse <- proc_data |> select(gen1,gen2,gen3,gen4,gen5,gen6)
+spec_dse <- proc_data |> select(spec1, spec2, spec3)
+psych::alpha(gen_dse)
+psych::alpha(spec_dse)
+```
 # Leer los modelos con readModels
 
 ```{r}
-resultados <- readModels("./mplus_files/")
+resultados <- readModels("./mplus_files_first_task/")
 # Matriz de pearsons
 pearsons <- resultados$pearson.out$sampstat$correlations
 # Matriz policorica
@@ -158,27 +169,6 @@ rownames(polychoric) <- nombres_mapeados
 colnames(polychoric) <- nombres_mapeados
 ```
 
-## Formateo apa
-
-```{r}
-format_apa_matrix <- function(matrix) {
-  
-  mat <- as.matrix(matrix)
-  
-  diag(mat) <- 1
-  
-  mat[upper.tri(mat)] <- NA
-
-  mat_df <- mat |>
-    as.data.frame() |>
-    rownames_to_column(var = "Ítem")
-    
-  return(mat_df)
-}
-
-pearsons_df <- format_apa_matrix(pearsons)
-polychoric_df <- format_apa_matrix(polychoric)
-```
 
 ## Funciones para estilizar las tablas
 
@@ -186,18 +176,31 @@ polychoric_df <- format_apa_matrix(polychoric)
 style_desc_table <- function(ft) {
   
   ft <- ft |>
-    colformat_double(j = c("Media", "D.E.", "Asimetría", "Curtosis"), digits = 2) |>
-    colformat_double(j = "% Casos perdidos", digits = 1, suffix = "%") |>
+    # GRUPO 1: Las columnas de porcentaje (Respuestas + Missings)
+    # Usamos digits = 1 (ej: 25.4%) y agregamos el sufijo
+    colformat_double(
+      j = c("1", "2", "3", "4", "% Casos perdidos"), 
+      digits = 1, 
+      suffix = "%"
+    ) |>
     
+    # GRUPO 2: Los coeficientes estadísticos (Asimetría y Curtosis)
+    # Usamos digits = 2 y SIN sufijo
+    colformat_double(
+      j = c("Asimetría", "Curtosis"), 
+      digits = 2
+    ) |>
+    
+    # --- El resto del estilo se mantiene igual ---
     border_remove() |>
-    hline_top(border = officer::fp_border(width = 2), part = "all") |>
-    hline_bottom(border = officer::fp_border(width = 2), part = "all") |>
-    hline(i = 1, border = officer::fp_border(width = 1.5), part = "header") |>
+    hline_top(border = fp_border(width = 2), part = "header") |> 
+    hline_bottom(border = fp_border(width = 2), part = "body") |>
+    hline(i = 1, border = fp_border(width = 1.5), part = "header") |>
     
     bold(part = "header") |>
     font(fontname = "Calibri", part = "all") |>
-    fontsize(size = 9, part = "body") |>
-    fontsize(size = 10, part = "header") |>
+    fontsize(size = 10, part = "body") |>
+    fontsize(size = 11, part = "header") |>
     
     padding(padding = 3, part = "all") |>
     align(align = "center", part = "header") |>
@@ -209,35 +212,7 @@ style_desc_table <- function(ft) {
 }
 ```
 
-```{r}
-style_corr_table <- function(ft) {
-  
-  num_cols <- ncol(ft$body$dataset)
-  
-  ft <- ft |>
 
-    colformat_double(j = 2:num_cols, digits = 3) |>
-            
-    border_remove() |>
-    hline_top(border = officer::fp_border(width = 2), part = "all") |>
-    hline_bottom(border = officer::fp_border(width = 2), part = "all") |>
-    hline(i = 1, border = officer::fp_border(width = 1.5), part = "header") |>
-    
-    bold(part = "header") |>
-    font(fontname = "Calibri", part = "all") |>
-    fontsize(size = 9, part = "body") |>
-    fontsize(size = 10, part = "header") |>
-    
-    padding(padding = 3, part = "all") |>
-    align(align = "center", part = "header") |>
-    align(align = "left", part = "body", j = 1) |>
-    align(align = "center", part = "body", j = 2:num_cols) |>
-
-    autofit()
-  
-  return(ft)
-}
-```
 
 ## Exportación de tablas en formato docx
 
@@ -248,27 +223,9 @@ ft_descriptivos <- flextable(descriptivos_df) |>
   style_desc_table() |> 
   add_header_row(values = "Tabla 2: Estadísticos Descriptivos de los Ítems", colwidths = ncol(descriptivos_df))
 
-
-ft_pearsons <- flextable(pearsons_df) |>
-  style_corr_table() |> 
-  add_header_row(values = "Tabla 3: Matriz de Correlación de Pearson", colwidths = ncol(pearsons_df))
-
-ft_polychoric <- flextable(polychoric_df) |>
-  style_corr_table() |> 
-  add_header_row(values = "Tabla 4: Matriz de Correlación Policórica", colwidths = ncol(polychoric_df))
-
 save_as_docx(
   ft_descriptivos, 
   path = "figures/tabla_descriptivos.docx"
 )
 
-save_as_docx(
-  ft_pearsons, 
-  path = "figures/tabla_pearson.docx"
-)
-
-save_as_docx(
-  ft_polychoric, 
-  path = "figures/tabla_policorica.docx"
-)
 ```
